--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -138,7 +138,7 @@
 									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">MANTAPNYOOO</a></li>
 									</ul>
 								</article>
 							</section>
